--- a/index.html
+++ b/index.html
@@ -616,6 +616,6 @@
     <div id="toastContainer"></div>
   </div>
 
-  <script src="./src/App.js"></script>
+  <script type="module" src="./src/App.js"></script>
 </body>
 </html>
